overflow fix

--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -67,6 +67,7 @@ a {
 
 main {
     position: relative;
+    overflow: hidden;
 }
 
 // Imports
